--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
+        "laravel/octane": "^2.7",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
     },
